JT-2199 Style source links correctly on mobile

--- a/app/assets/stylesheets/_school-profile.scss
+++ b/app/assets/stylesheets/_school-profile.scss
@@ -8,4 +8,11 @@
     padding: 30px 15px;
     max-width: 1170px;
   }
+  .source-link {
+    text-align: center;
+    padding-top: 5px;
+    @include media-breakpoint-up(sm) {
+      text-align: left;
+    }
+  }
 }
